@@ -62,6 +62,8 @@ Version 2.0.0rc6 - The '???' version.
 		  was not working. It has been renamed to ConnectTo. Also
 		  fixed help command output, should look better now.
 		* Added "-fmessage-length=0 -W" flags when --enable-debug.
+		* Changed m4/wxwin.m4 to recognize wx-config --libs base (no
+		  equal sign from 2.5.3 and up)
 
 	rommel:
 		* Patch to implement the commands serverconnect and reloadipf
